--- a/src/css/App.css
+++ b/src/css/App.css
@@ -97,7 +97,8 @@
   cursor: pointer; }
 
 .search-song-input {
-  width: 80%; }
+  width: 80%;
+  margin-left: 10%; }
 
 .songs-modal-container {
   max-height: 330px;
@@ -142,7 +143,7 @@
   line-height: 100px; }
 
 .error img {
-  width: 81%; }
+  width: 100%; }
 
 @keyframes fadedDashboard-PC {
   from {
@@ -666,6 +667,14 @@ html {
     right: 5px;
     display: block;
     cursor: pointer; }
+  .user-icon {
+    height: 2.5rem;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    display: block;
+    cursor: pointer;
+    border-radius: 50%; }
   ::-webkit-scrollbar {
     width: 10px; }
   ::-webkit-scrollbar-track {
@@ -899,6 +908,14 @@ html {
     right: 5px;
     display: block;
     cursor: pointer; }
+  .user-icon {
+    height: 2.5rem;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    display: block;
+    cursor: pointer;
+    border-radius: 50%; }
   .progress {
     -webkit-appearance: none;
     width: 100%;
