--- a/src/css/home/AddSong/AddSong.css
+++ b/src/css/home/AddSong/AddSong.css
@@ -12,7 +12,8 @@
   cursor: pointer; }
 
 .search-song-input {
-  width: 80%; }
+  width: 80%;
+  margin-left: 10%; }
 
 .songs-modal-container {
   max-height: 330px;
@@ -57,4 +58,4 @@
   line-height: 100px; }
 
 .error img {
-  width: 81%; }
+  width: 100%; }
