--- a/src/scss/home/AddSong/AddSong.scss
+++ b/src/scss/home/AddSong/AddSong.scss
@@ -15,6 +15,7 @@
 
 .search-song-input{
     width: 80%;
+    margin-left: 10%;
 }
 
 .songs-modal-container{
@@ -70,6 +71,6 @@
 }
 
 .error img{
-    width: 81%;
+    width: 100%;
 }
 
