--- a/src/css/App.css
+++ b/src/css/App.css
@@ -145,6 +145,13 @@
 .error img {
   width: 100%; }
 
+input {
+  font-family: Verdana;
+  letter-spacing: 0.125em; }
+
+.on-hover:hover {
+  opacity: 0.8; }
+
 @keyframes fadedDashboard-PC {
   from {
     opacity: 0;
@@ -230,6 +237,52 @@
 
 .custom-modal-01 .custom-btn-close-modal:hover {
   color: var(--color-btn-close-modal-hover); }
+
+.custom-modal-login .modal-content {
+  margin-bottom: 10vh;
+  font-family: Verdana;
+  letter-spacing: 0.1em; }
+  .custom-modal-login .modal-content .custom-header-login {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: 0.1em; }
+  .custom-modal-login .modal-content .to-sign-up:hover {
+    cursor: pointer;
+    opacity: 0.8; }
+  .custom-modal-login .modal-content label:hover {
+    opacity: 0.8; }
+
+.custom-modal-login .modal-dialog .modal-content {
+  background: linear-gradient(0deg, #420c0c 0%, #4b5280 100%); }
+
+.custom-modal-login .custom-btn-close-modal {
+  position: absolute;
+  top: 15px;
+  right: 15px; }
+
+.custom-modal-login .modal-body {
+  padding: 50px 30px; }
+
+.custom-modal-login .custom-login-button {
+  width: 100%;
+  background: linear-gradient(0deg, #22c1c3 0%, #2d51fd 100%);
+  border-radius: 3rem;
+  font-family: Verdana;
+  letter-spacing: 0.12em; }
+
+.custom-modal-login .social-buttons button {
+  margin: 0 10px;
+  border-radius: 50%;
+  background: linear-gradient(0deg, #22c1c3 0%, #2d51fd 100%);
+  color: #fff;
+  border: none; }
+
+.custom-modal-login .custom-login-button:hover, .custom-modal-login .social-buttons button:hover {
+  background: linear-gradient(0deg, #1b8688 0%, #2037a8 100%); }
+
+.login-page {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(0deg, #401242 0%, #05091d 100%); }
 
 .hidden {
   display: none; }
@@ -318,9 +371,6 @@ html {
 .option-songs-btn button:hover {
   background: var(--background-option-songs-btn-hover);
   color: var(--color-option-songs-btn-hover); }
-
-.custom-modal-01 {
-  top: 20vh; }
 
 @keyframes fromVolume0ToVolume1 {
   0% {
@@ -579,9 +629,9 @@ html {
     left: 40%;
     width: 50%;
     height: 100%;
-    /* top:0; */
+    top: 0;
     bottom: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     animation: fadedSong-PC 0.8s ease-in-out; }
   .song {
@@ -675,6 +725,15 @@ html {
     display: block;
     cursor: pointer;
     border-radius: 50%; }
+  .user-icon-home {
+    height: 2.5rem;
+    position: absolute;
+    border-radius: 50%;
+    cursor: pointer;
+    right: 5px;
+    top: 7.2rem; }
+  #change-list-btn:hover, .volume-container:hover, .user-icon-home:hover, .user-icon:hover {
+    opacity: 0.8; }
   ::-webkit-scrollbar {
     width: 10px; }
   ::-webkit-scrollbar-track {
@@ -778,7 +837,7 @@ html {
     position: fixed;
     left: 0;
     top: 0;
-    animation: fadedDashboard-Mobile 0.8s ease-in-out;
+    animation: fadedDashboard-Mobile 1s ease-in-out;
     display: block;
     width: 100%;
     z-index: 1; }
@@ -844,24 +903,13 @@ html {
   .playlist {
     padding-top: 420px;
     padding: 420px 15px 15px 15px;
-    animation: fadedSong-Mobile 0.8s ease-in-out; }
+    animation: fadedSong-Mobile 1s ease-in-out; }
   .song {
     display: flex;
     align-items: center;
     margin-bottom: 3px;
     background: var(--background-song);
     padding: 8px 16px;
-    /* border-bottom: 3px solid transparent;
-      border-image: linear-gradient(
-        to right,
-        #ff0000,
-        #ff3300,
-        #fbff00,
-        #07ff30,
-        #00eeff,
-        #6f00ff,
-        #ff009d
-      ); */
     border-image-slice: 1;
     cursor: pointer; }
   .song:hover {
@@ -902,20 +950,26 @@ html {
     color: #b1b1b1;
     font-size: 18px; }
   #change-list-btn {
-    height: 2.2rem;
+    height: 42px;
     position: absolute;
     top: 5px;
     right: 5px;
     display: block;
     cursor: pointer; }
   .user-icon {
-    height: 2.5rem;
+    height: 42px;
     position: absolute;
     top: 5px;
     right: 5px;
     display: block;
     cursor: pointer;
     border-radius: 50%; }
+  .user-icon-home {
+    height: 42px;
+    position: absolute;
+    border-radius: 50%;
+    right: 5px;
+    top: 7.2rem; }
   .progress {
     -webkit-appearance: none;
     width: 100%;
