--- a/src/css/App.css
+++ b/src/css/App.css
@@ -101,15 +101,41 @@
   margin-left: 10%; }
 
 .songs-modal-container {
+  height: 330px;
   max-height: 330px;
   overflow-y: scroll;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  background-color: black; }
+
+.songs-modal-header {
+  display: flex;
+  margin-top: 15px;
+  background: linear-gradient(to top, #9a9b95, #86c2cc);
+  height: 50px;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem; }
+  .songs-modal-header button {
+    font-size: 0.8rem;
+    border: none;
+    width: 30vw;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: linear-gradient(to bottom, #0a5b74, black);
+    height: 40px;
+    margin: 5px;
+    color: white;
+    border-radius: 1rem; }
+  .songs-modal-header .btn-active {
+    background: linear-gradient(to bottom, #2a3383, black);
+    box-shadow: 0 5px 15px rgba(36, 52, 124, 0.918); }
+  .songs-modal-header .btn-unactive {
+    background: linear-gradient(to bottom, #0a5b74, black); }
 
 .songs-modal {
   position: relative;
   margin: 10px 0;
   display: flex;
   background-color: black;
+  border: #5e5d5b solid 2px;
   max-height: 100px;
   width: 100%; }
   .songs-modal .songs-modal-img {
@@ -152,6 +178,12 @@ input {
 .on-hover:hover {
   opacity: 0.8;
   cursor: pointer; }
+
+@keyframes faded {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 @keyframes fadedDashboard-PC {
   from {
@@ -1284,3 +1316,23 @@ html {
   --color-option-songs-btn: white;
   --color-option-songs-btn-hover: rgb(255, 255, 255);
   --color-control-btn: rgb(173, 171, 171); }
+
+.alert-box {
+  width: 100%;
+  font-size: 0.8rem;
+  position: relative;
+  padding-left: 20px;
+  background: linear-gradient(to bottom, #b15c5c, #5e2d2d);
+  border-radius: 0.5rem;
+  margin: 15px 0;
+  height: 40px;
+  line-height: 40px;
+  animation: faded 0.70022003s ease-in-out; }
+  .alert-box button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    background: none;
+    color: white;
+    line-height: 20px; }
